--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -146,7 +146,7 @@
   }
   
   body {
-    @apply bg-surface-dark text-foreground antialiased;
+    @apply  text-foreground antialiased;
     font-feature-settings: "ss01", "ss02", "cv01", "cv02", "cv03";
   }
 
@@ -202,41 +202,3 @@
     @apply absolute w-32 h-32 rounded-full opacity-30 blur-3xl;
   }
 }
-
-.scrollbar-hidden::-webkit-scrollbar {
-  display: none;
-}
-
-.scrollbar-hidden {
-  scrollbar-width: none;
-}
-
-
-.custom-scrollbar::-webkit-scrollbar {
-width: 3px; /* Horizontal scrollbar height or Vertical width */
-}
-
-/* Customize the track (background area of the scrollbar) */
-.custom-scrollbar::-webkit-scrollbar-track {
-background:linear-gradient("right",red,yellow); /* Track color */
-border-radius: 10px;
-}
-
-/* Customize the thumb (draggable part of the scrollbar) */
-.custom-scrollbar::-webkit-scrollbar-thumb {
-background-color: #4c4585; /* Thumb color */
-border-radius: 10px;
-border: 3px solid #c5b90a; /* Thumb border */
-}
-
-/* On hover, change the thumb color */
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-background-color: #555; /* Hover color */
-}
-
-
-
-
-/* "@tailwindcss/postcss": "^4.0.9", 
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9" */
